# PKGcurses

./: .gitignore  Cargo.toml  IMPROVEMENTS.md  PACKAGE_MANAGER_IMPLEMENTATION.md  README.md  test_compile.sh
examples/: apt.toml  aptdeb.toml  aptubuntu.toml  config.toml  dnf.toml  emerge.toml  nix.toml  pacman.toml  paru.toml
src/: main.rs  ui.rs
src/core/: api.rs  aur.rs  cache.rs  config.rs  local.rs  mod.rs  package_managers.rs  unified.rs
src/ui/: app.rs  components.rs  events.rs  mod.rs  render.rs  tui.rs
