[package]
name = "pmux"
version = "0.1.0"
edition = "2021"
authors = ["pmux contributors"]
description = "Package manager multiplexer - a terminal-based universal package manager interface"
license = "MIT"

[dependencies]
ratatui = "0.27"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
urlencoding = "2.1"
